<resources>
    <string name="app_name">DMU Surveys</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="logo">DMUSurveys Logo</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_survey">Create a new Survey</string>
    <string name="create_survey">Create Survey</string>
    <string name="welcome">Welcome back</string>
    <string name="update_surveys">Update Surveys</string>
    <string name="active_surveys">Active Surveys</string>
    <string name="all_surveys">All Surveys</string>
    <string name="logout">Log Out</string>
    <string name="admin_login">Admin Log In</string>
    <string name="question_text">Question Text</string>
    <string name="neither">Neither Agree nor Disagree</string>
    <string name="strongly_agree">Strongly Agree</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="survey_title">Survey Title</string>
    <string name="end_date">End Date</string>
    <string name="select_date">Select Date</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="question_10">Question 10</string>
    <string name="question_5">Question 5</string>
    <string name="question_6">Question 6</string>
    <string name="question_7">Question 7</string>
    <string name="question_8">Question 8</string>
    <string name="question_9">Question 9</string>
    <string name="question_1_col">Question 1:</string>
    <string name="question_2_col">Question 2:</string>
    <string name="question_3_col">Question 3:</string>
    <string name="question_4_col">Question 4:</string>
    <string name="question_5_col">Question 5:</string>
    <string name="question_6_col">Question 6:</string>
    <string name="question_7_col">Question 7:</string>
    <string name="question_8_col">Question 8:</string>
    <string name="question_9_col">Question 9:</string>
    <string name="question_10_col">Question 10:</string>
    <string name="strongly_agree_col">Strongly Agree:</string>
    <string name="agree_col">Agree:</string>
    <string name="neither_col">Neither Agree nor Disagree:</string>
    <string name="disagree_col">Disagree:</string>
    <string name="strongly_disagree_col">Strongly Disagree:</string>
    <string name="zero">0</string>
    <string name="update_survey">Update Survey</string>
    <string name="surveys">Surveys</string>
    <string name="empty" />
    <string name="startdate">Start Date</string>
    <string name="responses">Responses</string>
</resources>