<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnswerSurveyActivity">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/question_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGrpAnswers"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <RadioButton
            android:id="@+id/radioBtnStronglyAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingStart="10dp"
            android:text="@string/strongly_agree"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioBtnAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingStart="10dp"
            android:text="@string/agree"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioBtnNeither"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingStart="10dp"
            android:text="@string/neither"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioBtnDisagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingStart="10dp"
            android:text="@string/disagree"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioBtnStronglyDisagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingStart="10dp"
            android:text="@string/strongly_disagree"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:onClick="nextQuestionButton"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="30dp"
        android:onClick="previousQuestionButton"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>