<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllSurveysActivity">

    <LinearLayout
        android:id="@+id/AdminLinearLayoutV"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView421221"
        tools:ignore="MissingConstraints">

        <ListView
            android:id="@+id/AdminSurveyListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView421221"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:text="@string/survey_title"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView46222"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:text="@string/startdate"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/textView421221"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView442"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:text="@string/end_date"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/textView46222"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4843"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/responses"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView442"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>